--- a/home.css
+++ b/home.css
@@ -10,12 +10,25 @@
   justify-content: flex-start;
   background-color: #000000;
 }
-.home-main {
+.home-container01 {
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
+  z-index: 100;
+  overflow: hidden;
+  position: absolute;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.home-main {
+  top: 0px;
+  flex: 0;
+  left: 0px;
+  width: 100%;
+  height: 100%;
   display: flex;
+  z-index: 122;
   overflow: hidden;
   position: absolute;
   align-items: flex-start;
@@ -76,7 +89,7 @@
   font-weight: 400;
   margin-left: 3%;
 }
-.home-container1 {
+.home-container02 {
   gap: var(--dl-space-space-unit);
   width: 100%;
   height: 40%;
@@ -116,7 +129,7 @@
 .home-text12 {
   font-weight: 500;
 }
-.home-container2 {
+.home-container03 {
   gap: var(--dl-space-space-twounits);
   flex: 0;
   width: 100%;
@@ -146,6 +159,11 @@
   transform: scale(1.25);
   background-color: #b9f3a1;
 }
+.home-playnow:active {
+  transform: scale(1);
+  transition: 0.1s;
+  background-color: #3cc964;
+}
 .home-text14 {
   color: #000000;
   font-size: 12px;
@@ -165,6 +183,7 @@
   border-radius: 10px;
   flex-direction: row;
   justify-content: center;
+  text-decoration: none;
   background-color: #ffffff;
   transition-timing-function: ease-in-out;
 }
@@ -172,6 +191,11 @@
   cursor: pointer;
   transform: scale(1.25);
   background-color: #b9f3a1;
+}
+.home-learnmore:active {
+  transform: scale(1);
+  background: #3cc964;
+  transition: 0.1s;
 }
 .home-text17 {
   color: #000000;
@@ -199,6 +223,11 @@
   cursor: pointer;
   transform: scale(1.25);
   background-color: #b9f3a1;
+}
+.home-support:active {
+  transform: scale(1);
+  transition: 0.1s;
+  background-color: #3cc964;
 }
 .home-text20 {
   color: #000000;
@@ -232,8 +261,257 @@
   color: #b9f3a1;
   transform: scale(1.25);
 }
+.home-endtext:active {
+  color: #3cc964;
+  transform: scale(0.75);
+  transition: 0.2s;
+}
 .home-text22 {
   text-decoration: underline;
+}
+.home-learnmore1 {
+  top: 100%;
+  flex: 0 0 auto;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: 144;
+  overflow: hidden;
+  position: absolute;
+  align-items: flex-start;
+  padding-top: 3%;
+  padding-left: 3%;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #000000;
+}
+.home-text24 {
+  color: #ffffff;
+  font-size: 24px;
+}
+.home-text27 {
+  color: #dcdcdc;
+  width: 100%;
+  font-style: normal;
+  text-align: justify;
+  font-family: Open Sans;
+  font-weight: 300;
+  padding-top: 2px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: var(--dl-space-space-oneandhalfunits);
+}
+.home-container04 {
+  gap: var(--dl-space-space-oneandhalfunits);
+  flex: 0 0 auto;
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  flex-direction: row;
+}
+.home-container05 {
+  flex: 0 0 auto;
+  width: auto;
+  display: flex;
+  position: relative;
+  transition: 0.3s;
+  align-items: flex-start;
+  border-radius: 10px;
+  flex-direction: column;
+  background-color: #50ff80;
+  animation-timing-function: ease-in-out;
+}
+.home-container05:hover {
+  transform: scale(1.1);
+}
+.home-container06 {
+  width: 382px;
+  height: 160px;
+  display: flex;
+  align-items: flex-start;
+  border-radius: 10px;
+  background-size: cover;
+  justify-content: flex-start;
+  background-image: url("public/playground_assets/out-2022-06-26_15.08.00%20-%20kopie-200h.png");
+  background-position: center;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.home-text28 {
+  top: 0px;
+  left: 0px;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: var(--dl-space-space-unit);
+  position: absolute;
+  align-self: flex-start;
+  font-style: normal;
+  text-align: left;
+  transition: 0.3s;
+  font-family: Open Sans;
+  font-weight: 400;
+  user-select: none;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.home-text28:hover {
+  opacity: 1;
+}
+.home-title {
+  color: #000000;
+  width: 100%;
+  padding: var(--dl-space-space-halfunit);
+  align-self: flex-start;
+  font-style: normal;
+  text-align: center;
+  font-family: Open Sans;
+  font-weight: 700;
+  user-select: none;
+}
+.home-container07 {
+  flex: 0 0 auto;
+  width: auto;
+  display: flex;
+  position: relative;
+  transition: 0.3s;
+  align-items: flex-start;
+  border-radius: 10px;
+  flex-direction: column;
+  background-color: #50ff80;
+  animation-timing-function: ease-in-out;
+}
+.home-container07:hover {
+  transform: scale(1.1);
+}
+.home-container08 {
+  width: 382px;
+  height: 160px;
+  display: flex;
+  align-items: flex-start;
+  border-radius: 10px;
+  background-size: cover;
+  justify-content: flex-start;
+  background-image: url("public/playground_assets/out-2022-11-04_13.04.03-200h.png");
+  background-position: center;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.home-text31 {
+  top: 0px;
+  left: 0px;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: var(--dl-space-space-unit);
+  position: absolute;
+  align-self: flex-start;
+  font-style: normal;
+  text-align: left;
+  transition: 0.3s;
+  font-family: Open Sans;
+  font-weight: 400;
+  user-select: none;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.home-text31:hover {
+  opacity: 1;
+}
+.home-title1 {
+  color: #000000;
+  width: 100%;
+  padding: var(--dl-space-space-halfunit);
+  align-self: flex-start;
+  font-style: normal;
+  text-align: center;
+  font-family: Open Sans;
+  font-weight: 700;
+  user-select: none;
+}
+.home-container09 {
+  flex: 0 0 auto;
+  width: auto;
+  display: flex;
+  position: relative;
+  transition: 0.3s;
+  align-items: flex-start;
+  border-radius: 10px;
+  flex-direction: column;
+  background-color: #50ff80;
+  animation-timing-function: ease-in-out;
+}
+.home-container09:hover {
+  transform: scale(1.1);
+}
+.home-container10 {
+  width: 382px;
+  height: 160px;
+  display: flex;
+  align-items: flex-start;
+  border-radius: 10px;
+  background-size: cover;
+  justify-content: flex-start;
+  background-image: url("public/playground_assets/out-2022-08-06_13.06.30%20-%20kopie-200h.png");
+  background-position: center;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.home-text34 {
+  top: 0px;
+  left: 0px;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: var(--dl-space-space-unit);
+  position: absolute;
+  align-self: flex-start;
+  font-style: normal;
+  text-align: left;
+  transition: 0.3s;
+  font-family: Open Sans;
+  font-weight: 400;
+  user-select: none;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.home-text34:hover {
+  opacity: 1;
+}
+.home-title2 {
+  color: #000000;
+  width: 100%;
+  padding: var(--dl-space-space-halfunit);
+  align-self: flex-start;
+  font-style: normal;
+  text-align: center;
+  font-family: Open Sans;
+  font-weight: 700;
+  user-select: none;
+}
+.home-text35 {
+  color: #dcdcdc;
+  width: 100%;
+  font-style: normal;
+  text-align: justify;
+  font-family: Open Sans;
+  font-weight: 300;
+  padding-top: var(--dl-space-space-oneandhalfunits);
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: var(--dl-space-space-oneandhalfunits);
+}
+.home-text36 {
+  font-weight: 500;
+}
+.home-link {
+  text-decoration: none;
 }
 @media(max-width: 479px) {
   .home-video {
@@ -253,7 +531,7 @@
     font-size: 70px;
     margin-top: 20%;
   }
-  .home-container1 {
+  .home-container02 {
     width: 100%;
     height: auto;
     align-self: center;
@@ -266,8 +544,18 @@
     font-size: 16px;
     text-align: left;
   }
-  .home-container2 {
+  .home-container03 {
     gap: var(--dl-space-space-unit);
     width: 100%;
+  }
+  .home-text27 {
+    width: 100%;
+    font-size: 16px;
+    text-align: left;
+  }
+  .home-text35 {
+    width: 100%;
+    font-size: 16px;
+    text-align: left;
   }
 }
