--- a/home.css
+++ b/home.css
@@ -1,4 +1,4 @@
-.app-component-container {
+.teamcard-container {
   gap: var(--dl-space-space-unit);
   flex: 0 0 auto;
   width: auto;
@@ -14,83 +14,92 @@
   justify-content: center;
   background-color: #78e088;
 }
-.app-component-image {
+.teamcard-image {
   width: 40px;
   height: 40px;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-round);
 }
-.app-component-container1 {
+.teamcard-container1 {
   flex: 0 0 auto;
   width: auto;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.app-component-text {
+.teamcard-text {
   color: #000000;
   font-size: 18px;
   font-style: normal;
   font-family: Open Sans;
   font-weight: 700;
 }
-.app-component-text1 {
+.teamcard-text1 {
   color: #000000;
   font-size: 12px;
   font-style: normal;
   font-family: Open Sans;
   font-weight: 300;
 }
-.app-component-root-class-name {
+.teamcard-root-class-name {
   width: auto;
-  background-color: #e0a778;
+  background-color: #f7986f;
 }
-.app-component-root-class-name1 {
+.teamcard-root-class-name1 {
   background-color: #b3b3b3;
 }
-.app-component-root-class-name2 {
+.teamcard-root-class-name2 {
   width: auto;
-  background-color: #e0a778;
+  background-color: #f7986f;
 }
-.app-component-root-class-name3 {
+.teamcard-root-class-name3 {
   width: auto;
-  background-color: #e0787a;
+  background-color: #f76f6f;
 }
-.app-component-root-class-name4 {
+.teamcard-root-class-name4 {
   background-color: #a7fd85;
 }
-.app-component-root-class-name5 {
+.teamcard-root-class-name5 {
   background-color: #fd8587;
 }
-.app-component-root-class-name6 {
+.teamcard-root-class-name6 {
   background-color: #859dfd;
 }
-.app-component-root-class-name7 {
+.teamcard-root-class-name7 {
   background-color: #859dfd;
 }
 
-.app-component-root-class-name9 {
+.teamcard-root-class-name9 {
   background-color: #99bb9e;
 }
 
-.app-component-root-class-name11 {
+.teamcard-root-class-name11 {
   background-color: #58a062;
 }
-.app-component-root-class-name12 {
+.teamcard-root-class-name12 {
   background-color: #6c796e;
 }
-.app-component-root-class-name13 {
+.teamcard-root-class-name13 {
   background-color: #6c796e;
 }
-.app-component-root-class-name14 {
-  background-color: #78b3e0;
+.teamcard-root-class-name14 {
+  background-color: #6fc2f7;
 }
-.app-component-root-class-name15 {
-  background-color: #78B3E0;
+.teamcard-root-class-name15 {
+  background-color: #6fc2f7;
 }
-
-
-
+.teamcard-root-class-name16 {
+  background-color: #aff76f;
+}
+.teamcard-root-class-name17 {
+  background-color: #aff76f;
+}
+.teamcard-root-class-name18 {
+  background-color: #aff76f;
+}
+.teamcard-root-class-name19 {
+  background-color: #aff76f;
+}
 
 .home-container {
   width: 100%;
@@ -802,6 +811,17 @@
   padding-top: 0%;
   flex-direction: column;
   justify-content: center;
+  background-color: #000000;
+}
+.home-container14 {
+  flex: 0 0 auto;
+  width: auto;
+  height: auto;
+  display: flex;
+  padding: var(--dl-space-space-twounits);
+  align-items: center;
+  border-radius: 10px;
+  flex-direction: column;
 }
 .home-text50 {
   color: #ffffff;
@@ -842,6 +862,7 @@
   width: 100%;
   height: auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .home-test-supporter {
@@ -850,6 +871,7 @@
   width: 100%;
   height: auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .home-support {
@@ -868,7 +890,8 @@
   border-radius: 10px;
   flex-direction: row;
   justify-content: center;
-  background-color: #50ff80;
+  text-decoration: none;
+  background-color: #ffffff;
   transition-timing-function: ease-in-out;
 }
 .home-support:hover {
@@ -924,58 +947,35 @@
   line-height: 1.75;
 }
 @media(max-width: 479px) {
-  .home-video {
-    flex: 1;
-    left: -200%;
-    width: 500%;
-  }
   .home-slogan {
-    flex: 1;
-    width: 100%;
-    height: auto;
-    position: static;
-    background-size: cover;
-    background-position: center;
+    height: 50%;
   }
   .home-text01 {
-    font-size: 70px;
-    margin-top: 20%;
+    font-size: 50px;
   }
   .home-container02 {
-    width: 100%;
-    height: auto;
-    align-self: center;
-    margin-right: 0%;
-    margin-bottom: 10%;
-    padding-right: var(--dl-space-space-unit);
+    height: 50%;
+    justify-content: flex-start;
+  }
+  .home-text05 {
+    font-size: 18px;
   }
   .home-text08 {
     width: 100%;
-    font-size: 16px;
-    text-align: left;
+    font-size: 12px;
+    text-align: center;
+    padding-left: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
   }
   .home-container03 {
-    gap: var(--dl-space-space-unit);
-    width: 100%;
+    gap: var(--dl-space-space-oneandhalfunits);
+    flex: 0;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    flex-direction: column;
+    justify-content: center;
   }
-  .home-text29 {
-    width: 100%;
-    font-size: 16px;
-    text-align: left;
-  }
-  .home-text37 {
-    width: 100%;
-    font-size: 16px;
-    text-align: left;
-  }
-  .home-text44 {
-    width: 100%;
-    font-size: 16px;
-    text-align: left;
-  }
-  .home-text53 {
-    width: 100%;
-    font-size: 16px;
-    text-align: left;
+  .home-playnow {
+    width: var(--dl-size-size-large);
   }
 }
